<resources>
    <string name="app_name">MsgShareApp</string>
    <string name="show_toast">Show Toast</string>
    <string name="hello_my_world_of_kotlin">Hello My World of Kotlin!</string>
    <string name="enter_your_message">Enter your Message</string>
    <string name="send_data_to_next_activity">Send Data To Next Activity</string>
    <string name="share_to_other_apps">Share to other Apps</string>
    <string name="recycler_view_demo">Recycler View Demo</string>
    <string name="title">Title</string>
    <string name="button_was_clicked">Button was clicked!</string>
    <string name="share_to">Share to:</string>
</resources>
